glz::lazy_json (#2211)
* glz::lazy

* lazy improvements

* Update lazy.hpp

* Update lazy.hpp

* rework parser

* lazy skip

* lazy_json improvements and docs

* optimizing and cleanup

* Update lazy_test.cpp

* avoid reparsing

* enum rather than magic number

* skip_string_fast reuse

* indexing and read_json support

* Update lazy-json.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,6 +106,7 @@ nav:
      - Partial Read: partial-read.md
      - Partial Write: partial-write.md
    - Reading: reading.md
+   - Lazy JSON (On-Demand): lazy-json.md
    - Writing: writing.md
    - Streaming I/O: streaming.md
    - Max Float Precision: max-float-precision.md
