--- a/.github/workflows/p2996-reflection.yml
+++ b/.github/workflows/p2996-reflection.yml
@@ -47,6 +47,9 @@ jobs:
             /tmp/p2996_test
           "
 
+    - name: Clone ut test library
+      run: git clone --depth 1 https://github.com/openalgz/ut.git tests/ut
+
     - name: Build and run non_aggregate_reflection_test
       run: |
         docker run --rm \
@@ -55,7 +58,7 @@ jobs:
           ${{ env.P2996_IMAGE }} \
           /bin/sh -c "
             clang++ -std=c++26 -freflection -fexpansion-statements -stdlib=libc++ \
-              -I/glaze/include -I/glaze/tests -I/glaze/tests/ut \
+              -I/glaze/include -I/glaze/tests -I/glaze/tests/ut/include \
               -DGLZ_REFLECTION26=1 \
               -Wl,-rpath,${{ env.P2996_LIB_PATH }} \
               -o /tmp/non_aggregate_test \
