--- a/.github/workflows/p2996-reflection.yml
+++ b/.github/workflows/p2996-reflection.yml
@@ -62,7 +62,8 @@ jobs:
               -DCMAKE_BUILD_TYPE=Release \
               -Dglaze_DEVELOPER_MODE=ON \
               -Dglaze_ENABLE_REFLECTION26=ON \
-              -Dglaze_BUILD_NETWORKING_TESTS=OFF &&
+              -Dglaze_BUILD_NETWORKING_TESTS=OFF \
+              -Dglaze_ENABLE_SANITIZERS=OFF &&
             cmake --build build --target json_test -j &&
             ./build/tests/json_test/json_test
           "
