--- a/.github/workflows/p2996-reflection.yml
+++ b/.github/workflows/p2996-reflection.yml
@@ -47,7 +47,7 @@ jobs:
             /tmp/p2996_test
           "
 
-    - name: Build and run json_test with CMake
+    - name: Build and run tests with CMake
       run: |
         docker run --rm \
           -v ${{ github.workspace }}:/glaze \
@@ -64,6 +64,6 @@ jobs:
               -Dglaze_ENABLE_REFLECTION26=ON \
               -Dglaze_BUILD_NETWORKING_TESTS=OFF \
               -Dglaze_ENABLE_SANITIZERS=OFF &&
-            cmake --build build --target json_test -j &&
-            ./build/tests/json_test/json_test
+            cmake --build build -j &&
+            ctest --test-dir build --output-on-failure -j
           "
