--- a/.github/workflows/p2996-reflection.yml
+++ b/.github/workflows/p2996-reflection.yml
@@ -63,7 +63,8 @@ jobs:
               -Dglaze_DEVELOPER_MODE=ON \
               -Dglaze_ENABLE_REFLECTION26=ON \
               -Dglaze_BUILD_NETWORKING_TESTS=OFF \
-              -Dglaze_ENABLE_SANITIZERS=OFF &&
+              -Dglaze_ENABLE_SANITIZERS=OFF \
+              -Dglaze_ENABLE_FUZZING=OFF &&
             cmake --build build -j &&
             ctest --test-dir build --output-on-failure -j
           "
