--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -131,7 +131,10 @@ add_subdirectory(compare_test)
 add_subdirectory(csv_test)
 add_subdirectory(eigen_test)
 add_subdirectory(example_json)
-add_subdirectory(exceptions_test)
+# exceptions_test uses types with mutex members that P2996 reflection can't handle
+if(NOT glaze_ENABLE_REFLECTION26)
+    add_subdirectory(exceptions_test)
+endif()
 add_subdirectory(inplace_vector)
 option(glaze_BUILD_PERFORMANCE_TESTS "Build performance tests" ON)
 if(glaze_BUILD_PERFORMANCE_TESTS)
@@ -145,7 +148,10 @@ add_subdirectory(mock_json_test)
 add_subdirectory(reflection)
 add_subdirectory(roundtrip)
 add_subdirectory(stencil)
-add_subdirectory(threading_test)
+# threading_test uses async_vector with mutex members that P2996 reflection can't handle
+if(NOT glaze_ENABLE_REFLECTION26)
+    add_subdirectory(threading_test)
+endif()
 add_subdirectory(toml_test)
 add_subdirectory(utility_formats)
 add_subdirectory(msgpack_test)
