--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -152,7 +152,10 @@ add_subdirectory(stencil)
 if(NOT glaze_ENABLE_REFLECTION26)
     add_subdirectory(threading_test)
 endif()
-add_subdirectory(toml_test)
+# toml_test has chrono duration ambiguity with P2996 reflection
+if(NOT glaze_ENABLE_REFLECTION26)
+    add_subdirectory(toml_test)
+endif()
 add_subdirectory(utility_formats)
 add_subdirectory(msgpack_test)
 add_subdirectory(ostream_buffer_test)
