lazy_beve support

--- a/tests/beve_test/CMakeLists.txt
+++ b/tests/beve_test/CMakeLists.txt
@@ -15,3 +15,11 @@ add_executable(beve_skip_null_on_read_test skip_null_on_read_test.cpp)
 target_link_libraries(beve_skip_null_on_read_test PRIVATE glz_test_common)
 
 add_test(NAME beve_skip_null_on_read_test COMMAND beve_skip_null_on_read_test)
+
+## Lazy BEVE test - for lazy parsing of BEVE data
+
+add_executable(lazy_beve_test lazy_beve_test.cpp)
+
+target_link_libraries(lazy_beve_test PRIVATE glz_test_common)
+
+add_test(NAME lazy_beve_test COMMAND lazy_beve_test)
