--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -141,7 +141,10 @@ if(glaze_BUILD_PERFORMANCE_TESTS)
     add_subdirectory(int_parsing)
 endif()
 add_subdirectory(jmespath)
-add_subdirectory(jsonrpc_test)
+# jsonrpc_test triggers a libc++ std::expected constraint recursion bug in P2996 clang
+if(NOT glaze_ENABLE_REFLECTION26)
+    add_subdirectory(jsonrpc_test)
+endif()
 add_subdirectory(key_transformers_test)
 add_subdirectory(lib_test)
 add_subdirectory(mock_json_test)
