--- a/tests/networking_tests/CMakeLists.txt
+++ b/tests/networking_tests/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(http_examples)
 # Networking Tests
 add_subdirectory(asio_repe)
 add_subdirectory(http_router_test)
+add_subdirectory(url_test)
 add_subdirectory(http_client_test)
 add_subdirectory(http_server_api_tests)
 add_subdirectory(https_test)
