--- a/.github/workflows/simple_float.yml
+++ b/.github/workflows/simple_float.yml
@@ -17,7 +17,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  clang:
     runs-on: ubuntu-24.04
 
     strategy:
@@ -47,6 +47,39 @@ jobs:
           -DCMAKE_C_COMPILER=${{env.CC}} \
           -DCMAKE_CXX_COMPILER=${{env.CXX}} \
           -DCMAKE_CXX_FLAGS="-stdlib=libc++" \
+          -Dglaze_SIMPLE_FLOAT_TEST=ON
+
+    - name: Build
+      run: cmake --build build -j $(nproc) --target simple_float_test
+
+    - name: Test
+      working-directory: build
+      run: ctest -R simple_float_test --output-on-failure
+
+  gcc:
+    runs-on: ubuntu-24.04
+
+    strategy:
+      fail-fast: false
+      matrix:
+        gcc: [14]
+        build_type: [Release]
+        std: [23]
+
+    env:
+      CC: gcc-${{matrix.gcc}}
+      CXX: g++-${{matrix.gcc}}
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Configure CMake
+      run: |
+        cmake -B ${{github.workspace}}/build \
+          -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
+          -DCMAKE_CXX_STANDARD=${{matrix.std}} \
+          -DCMAKE_C_COMPILER=${{env.CC}} \
+          -DCMAKE_CXX_COMPILER=${{env.CXX}} \
           -Dglaze_SIMPLE_FLOAT_TEST=ON
 
     - name: Build
