--- a/tests/networking_tests/CMakeLists.txt
+++ b/tests/networking_tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(asio_repe)
 add_subdirectory(http_router_test)
 add_subdirectory(url_test)
 add_subdirectory(http_client_test)
+add_subdirectory(http_client_ssl_test)
 add_subdirectory(http_server_api_tests)
 add_subdirectory(https_test)
 add_subdirectory(jsonrpc_registry_test)
