enum reflection documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
    - YAML: yaml.md
    - EETF: EETF/erlang-external-term-format.md
  - Serialization/Parsing:
+   - Automatic Enum Strings: enum-reflection.md
    - Exceptions: exceptions.md
    - Wrappers: wrappers.md
    - Custom Wrappers: custom-wrappers.md
