--- a/tests/networking_tests/CMakeLists.txt
+++ b/tests/networking_tests/CMakeLists.txt
@@ -1,5 +1,7 @@
 # glz_asio is defined in the parent tests/CMakeLists.txt
 
+option(glaze_BUILD_SSL_TESTS "Build SSL/TLS tests (requires OpenSSL headers matching target architecture)" ON)
+
 # HTTP Examples
 add_subdirectory(http_examples)
 add_subdirectory(http_server_post_test)
@@ -9,9 +11,13 @@ add_subdirectory(asio_repe)
 add_subdirectory(http_router_test)
 add_subdirectory(url_test)
 add_subdirectory(http_client_test)
-add_subdirectory(http_client_ssl_test)
+if(glaze_BUILD_SSL_TESTS)
+    add_subdirectory(http_client_ssl_test)
+endif()
 add_subdirectory(http_server_api_tests)
-add_subdirectory(https_test)
+if(glaze_BUILD_SSL_TESTS)
+    add_subdirectory(https_test)
+endif()
 add_subdirectory(jsonrpc_registry_test)
 add_subdirectory(openapi_test)
 add_subdirectory(repe_buffer_test)
