--- a/.github/workflows/boost-asio.yml
+++ b/.github/workflows/boost-asio.yml
@@ -61,7 +61,8 @@ jobs:
             -DCMAKE_BUILD_TYPE=Debug \
             -DCMAKE_CXX_STANDARD=23 \
             -DCMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS" \
-            -DCMAKE_EXE_LINKER_FLAGS="$CMAKE_EXE_LINKER_FLAGS"
+            -DCMAKE_EXE_LINKER_FLAGS="$CMAKE_EXE_LINKER_FLAGS" \
+            -Dglaze_USE_BUNDLED_ASIO=OFF
 
       - name: Build
         # Only build networking tests that actually use Asio
