SIMD Optimizations and can_error checks (#2270)
* skip_ws benchmark

* updated benchmarks

* Update skip_ws_benchmark.cpp

* Update skip_ws_benchmark.cpp

* Fix skip_matching_ws performance bug for sizes around 8

* SIMD optimizations for string handling

* Update buffer_traits.hpp

* Add can_error check for writing

* Add bit.hpp for common bit utilities

* Update neon.hpp

* Update neon.hpp

* fix __has_builtin checks

* updates

* Update benchmark.yml

--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,9 @@ alabastar.beve
 *.beve
 *.pem
 
-# Benchmark comparison directory
-benchmarks/
+# Benchmark build artifacts
+benchmarks/build*/
 pr_description.md
 /size_tests
 /tmp_benchmark
+/exterior
