Boost.Asio compatibility (#2273)
* Disable using bundled standalone Asio in boost-asio workflow

* Add BOOST_ROOT to boost-asio workflow

* Add install-boost id

* Fix Boost_ROOT casing

* Fix Boost_ROOT casing on the proper variable

* Fix http_client asio include

* Fix compilation errors

---------

Co-authored-by: Stephen Berry <stephenberry.developer@gmail.com>

--- a/.github/workflows/boost-asio.yml
+++ b/.github/workflows/boost-asio.yml
@@ -45,6 +45,7 @@ jobs:
           echo "PATH=/usr/lib/llvm-${{ matrix.compiler.version }}/bin:$PATH" >> $GITHUB_ENV
 
       - name: Install Boost
+        id: install-boost
         uses: MarkusJx/install-boost@v2
         with:
           boost_version: ${{ matrix.boost_version }}
@@ -61,7 +62,10 @@ jobs:
             -DCMAKE_BUILD_TYPE=Debug \
             -DCMAKE_CXX_STANDARD=23 \
             -DCMAKE_CXX_FLAGS="$CMAKE_CXX_FLAGS" \
-            -DCMAKE_EXE_LINKER_FLAGS="$CMAKE_EXE_LINKER_FLAGS"
+            -DCMAKE_EXE_LINKER_FLAGS="$CMAKE_EXE_LINKER_FLAGS" \
+            -Dglaze_USE_BUNDLED_ASIO=OFF
+        env:
+          Boost_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
 
       - name: Build
         # Only build networking tests that actually use Asio
