--- a/.github/workflows/gcc-p2996-reflection.yml
+++ b/.github/workflows/gcc-p2996-reflection.yml
@@ -1,8 +1,8 @@
 name: gcc-p2996-reflection
 
 # C++26 P2996 Reflection Testing with GCC
-# This workflow tests Glaze with GCC trunk (16+) which has P2996 reflection support
-# Uses gcc-latest snapshot packages from: https://jwakely.github.io/pkg-gcc-latest/
+# This workflow tests Glaze with GCC 16 which has P2996 reflection support
+# Uses GCC 16 from Ubuntu Toolchain test PPA: https://launchpad.net/~ubuntu-toolchain-r/+archive/ubuntu/test
 
 on:
   push:
@@ -16,40 +16,37 @@ env:
 
 jobs:
   test-gcc-p2996:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     name: GCC P2996 Reflection Tests
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Install GCC latest snapshot
+    - name: Install GCC 16 from Ubuntu Toolchain PPA
       run: |
-        wget --quiet https://kayari.org/gcc-latest/gcc-latest.deb
-        sudo dpkg -i gcc-latest.deb
-        echo "/opt/gcc-latest/bin" >> $GITHUB_PATH
-        echo "LD_RUN_PATH=/opt/gcc-latest/lib64" >> $GITHUB_ENV
-        echo "LD_LIBRARY_PATH=/opt/gcc-latest/lib64" >> $GITHUB_ENV
+        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        sudo apt-get update
+        sudo apt-get install -y gcc-16 g++-16
 
-    - name: Verify GCC version
+    - name: Verify GCC version and reflection support
       run: |
-        g++ --version
+        g++-16 --version
         echo "Checking for reflection support..."
-        echo '#include <meta>' | g++ -std=c++26 -freflection -x c++ -c - -o /dev/null 2>&1 || echo "Note: <meta> header check (may not be available yet)"
+        echo '#include <meta>' | g++-16 -std=c++26 -freflection -x c++ -c - -o /dev/null 2>&1 || echo "Note: <meta> header check (may not be available yet)"
 
     - name: Test P2996 reflection (direct compile)
       run: |
-        g++ -std=c++26 -freflection \
+        g++-16 -std=c++26 -freflection \
           -I${{ github.workspace }}/include -DGLZ_REFLECTION26=1 \
-          -Wl,-rpath,/opt/gcc-latest/lib64 \
           -o /tmp/p2996_test ${{ github.workspace }}/tests/p2996_test/p2996_test.cpp && \
         /tmp/p2996_test
 
     - name: Build and run tests with CMake
       run: |
         cmake -B build \
-          -DCMAKE_CXX_COMPILER=g++ \
+          -DCMAKE_C_COMPILER=gcc-16 \
+          -DCMAKE_CXX_COMPILER=g++-16 \
           -DCMAKE_CXX_FLAGS='-std=c++26 -freflection' \
-          -DCMAKE_EXE_LINKER_FLAGS='-Wl,-rpath,/opt/gcc-latest/lib64' \
           -DCMAKE_BUILD_TYPE=Release \
           -Dglaze_DEVELOPER_MODE=ON \
           -Dglaze_ENABLE_REFLECTION26=ON \
