--- a/.github/workflows/gcc-p2996-reflection.yml
+++ b/.github/workflows/gcc-p2996-reflection.yml
@@ -2,7 +2,7 @@ name: gcc-p2996-reflection
 
 # C++26 P2996 Reflection Testing with GCC
 # This workflow tests Glaze with GCC 16 which has P2996 reflection support
-# Uses GCC 16 from Ubuntu Toolchain test PPA: https://launchpad.net/~ubuntu-toolchain-r/+archive/ubuntu/test
+# Uses Ubuntu devel (Resolute/26.04) container with GCC 16 from Ubuntu Toolchain PPA
 
 on:
   push:
@@ -16,23 +16,30 @@ env:
 
 jobs:
   test-gcc-p2996:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:devel
     name: GCC P2996 Reflection Tests
 
     steps:
+    - name: Install prerequisites
+      run: |
+        apt-get update
+        apt-get install -y software-properties-common git cmake
+
     - uses: actions/checkout@v4
 
     - name: Install GCC 16 from Ubuntu Toolchain PPA
       run: |
-        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-        sudo apt-get update
-        sudo apt-get install -y gcc-16 g++-16
+        add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        apt-get update
+        apt-get install -y gcc-16 g++-16 || apt-get install -y gcc g++
 
     - name: Verify GCC version and reflection support
       run: |
-        g++-16 --version
+        g++-16 --version || g++ --version
         echo "Checking for reflection support..."
-        echo '#include <meta>' | g++-16 -std=c++26 -freflection -x c++ -c - -o /dev/null 2>&1 || echo "Note: <meta> header check (may not be available yet)"
+        echo '#include <meta>' | g++-16 -std=c++26 -freflection -x c++ -c - -o /dev/null 2>&1 || echo "Note: <meta> header check failed"
 
     - name: Test P2996 reflection (direct compile)
       run: |
