--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -144,6 +144,7 @@ add_subdirectory(toml_test)
 add_subdirectory(utility_formats)
 add_subdirectory(yaml_test)
 add_subdirectory(msgpack_test)
+add_subdirectory(zmem_test)
 add_subdirectory(ostream_buffer_test)
 add_subdirectory(istream_buffer_test)
 
