skip zmem on big-endian and provide a compile time error for big-endian

--- a/.github/workflows/big-endian.yml
+++ b/.github/workflows/big-endian.yml
@@ -81,6 +81,7 @@ jobs:
           -DCMAKE_CXX_STANDARD=23 \
           -Dglaze_BUILD_NETWORKING_TESTS=OFF \
           -Dglaze_BUILD_PERFORMANCE_TESTS=OFF \
+          -Dglaze_BUILD_ZMEM_TESTS=OFF \
           -Dglaze_ENABLE_FUZZING=OFF
 
     - name: Build
