Add 2 minute timeouts for msvc tests

--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -40,4 +40,4 @@ jobs:
 
     - name: Test
       working-directory: build
-      run: ctest --build-config ${{env.BUILD_TYPE}}
+      run: ctest --build-config ${{env.BUILD_TYPE}} --timeout 120
