--- a/tests/networking_tests/CMakeLists.txt
+++ b/tests/networking_tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(asio_repe)
 add_subdirectory(http_router_test)
 add_subdirectory(url_test)
 add_subdirectory(http_client_test)
+add_subdirectory(http_client_no_ssl_executor_test)
 if(glaze_BUILD_SSL_TESTS)
     add_subdirectory(http_client_ssl_test)
 endif()
