--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -123,6 +123,7 @@ add_subdirectory(buffer_pool_test)
 add_subdirectory(cli_menu_test)
 add_subdirectory(compare_test)
 add_subdirectory(ordered_map_test)
+add_subdirectory(ordered_dict_test)
 add_subdirectory(csv_test)
 add_subdirectory(eigen_test)
 add_subdirectory(example_json)
