--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -96,6 +96,17 @@ target_compile_options(ordered_map_benchmark PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:/O2>
 )
 
+# Generic JSON map type benchmark (ordered_small_map vs std::map)
+add_executable(generic_benchmark generic_benchmark.cpp)
+target_link_libraries(generic_benchmark PRIVATE
+  glaze
+  bencher::bencher
+)
+target_compile_options(generic_benchmark PRIVATE
+  $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-O3 -march=native>
+  $<$<CXX_COMPILER_ID:MSVC>:/O2>
+)
+
 # Ordered map memory comparison
 add_executable(ordered_map_memory ordered_map_memory.cpp)
 target_link_libraries(ordered_map_memory PRIVATE
