--- a/tests/networking_tests/rest_test/CMakeLists.txt
+++ b/tests/networking_tests/rest_test/CMakeLists.txt
@@ -10,4 +10,10 @@ add_executable(rest_registry_test rest_registry_test.cpp)
 
 target_link_libraries(rest_registry_test PRIVATE glz_test_exceptions)
 
+if(glaze_BUILD_REGISTRY_NOEXCEPT_TESTS)
+    add_executable(rest_registry_test_noexceptions rest_registry_noexceptions_test.cpp)
+    target_link_libraries(rest_registry_test_noexceptions PRIVATE glz_test_common)
+    add_test(NAME rest_registry_test_noexceptions COMMAND rest_registry_test_noexceptions)
+endif()
+
 add_subdirectory(rest_server)
